--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -12,12 +12,19 @@
         <activity
             android:name=".UI.activities.levelMenu"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
+
+
+
+        </activity>
+        <activity
+            android:name=".UI.activities.mainMenu">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".UI.activities.mainMenu"></activity>
     </application>
 
 </manifest>
